--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,79 @@
+html,
 body {
-  background: orange;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  background-color: #eaeaea;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  background-color: #72070f;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.title-box {
+  color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-1 {
+  margin: 0;
+  padding: 0;
+}
+
+.title-2 {
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  background-color: yellow;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-section {
+  background-color: aqua;
+  width: 30rem;
+  height: 30rem;
+}
+
+.footer {
+  width: 100%;
+  height: 80px;
+  background-color: #444444;
+  color: #f1f1f1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
